tests/fail/match_exhaustive.stderr
error[E0553]: Match is not exhaustive. Missing: None
 --> tests/fail/match_exhaustive.tk:6:5
  |
 6 |     match opt {
  |     ^
